# diff-ppl

./: .gitignore  README.md  TODO.md  diff_ppl.opam  dune-project  results_concrete.csv  results_concrete.md  results_symbolic.csv  results_symbolic.md
examples/: debug_edge_cases.slice  simple_test.slice  test.slice  test2.slice
examples/ad/: ex1.slice  ex2.slice  ex3.slice  ex4.slice  ex5.slice  ex6.slice  ex7.slice  ex8.slice  maxcut.slice
examples/real/: bernoulli.slice
lib/: adev.ml  ast.ml  cdf_ad.ml  circuit.ml  cut_order.ml  discretization.ml  distributions.ml  dune  eval.ml  expect.ml  inference.ml  interp.ml  lat.ml  lat.mli  lats.ml  lexer.mll  normalize.ml  parse.ml  parser.mly  pretty.ml  reverse.ml  simplify.ml  util.ml
lib/autodiff/: cdf_derivative.ml  forward.ml  reverse.ml
lib/circuit/: circuit_dd.ml  circuit_eliminate.ml  circuit_ir.ml  circuit_lower.ml  circuit_runtime.ml
lib/discretization/: cut_inference.ml  cut_order.ml  discretization.ml  normalize.ml
results/: results_concrete.csv
scripts/: benchmark.py  dropout.py  maxcut.py
test/: dune  test_circuit.ml  test_slice.ml
