(include_subdirs unqualified)

(library
 (name slice)
 (public_name diff_ppl.slice)
 (libraries gsl)
 (modules lat lats ast distributions lexer parser parse pretty interp util inference cut_inference cut_order normalize discretization simplify cdf_derivative expect forward reverse))

(ocamllex lexer)

(menhir
 (modules parser))
